--- a/css/index.css
+++ b/css/index.css
@@ -1,34 +1,100 @@
-/*START >>  */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+	box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+	font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+/****RESET ABOVE****/
+
+
 body{
 	max-width:1024px;
-    margin:40px 100px 40px 100px;
-    box-sizing:border-box;
-    padding:0;
-    margin:0;
-    max-width:100%;
-    border:1px solid red;
+	margin:40px 100px 40px 100px;
 }
-
-/****NAVIGATION****/
 .nav-container{
-    border:1px solid purple;
-    width:100%;
+	width:100%;
 	margin-bottom:75px;
-    display:flex;
-}
-
-/* .nav-container nav, img{
 	display:flex;
-} */
+}
+.nav-container nav, img{
+	display:flex;
+}
 .nav-container nav{
-    border:1px solid purple;
-    display:flex;
+	display:flex;
 	align-items:center;
 }
+nav a {
+	margin:0 40px 0 0;
+	color:gray;
+	text-decoration: none;
+	color:rgba(128,128,128,.5);
+}
+.nav-container img{
+	margin-left:40px;
+}
 
+/****MEDIA @ 800px****/
 @media (max-width: 800px){
     .nav-container{
-    background-color:red;
+    /* background-color:red; */
     flex-direction:column-reverse;
     align-items:center;
     }
@@ -39,20 +105,9 @@ body{
     .action-container img{
         display:none;
     }
-
 }
 
-nav a {
-    border:1px solid purple;
-    margin:0 40px 0 0;
-	color:gray;
-	text-decoration: none;
-	color:rgba(128,128,128,.5);
-}
-.nav-container img{
-    border:1px solid red;
-    margin-left:40px;
-}
+/****ACTION CONTAINER****/
 .action-container{
 	display:flex;
 	justify-content: space-around;
@@ -126,5 +181,4 @@ button{
 	text-align:center;
 	padding:100px;
 }
-
 
