--- a/css/index.css
+++ b/css/index.css
@@ -86,13 +86,12 @@ main{
 }
 
 .navbar div{
-	border:1px solid black;
+	/* border:1px solid black; */
 	width:100%;
 	display:flex;
 	justify-content: space-evenly;
 	align-items: center;
 	font-size:14px;
-	font-weight:bold;
 }
 
 .navbar a{
@@ -119,32 +118,49 @@ main{
 @media (max-width: 500px){
     body{
 		background-color:pink;
-	}
-	.navbar{
-		/* border:1px solid purple;
-		background:gold;
-		width:100%;
-		margin-bottom:75px;
-		display:flex;
-		justify-content: space-between; */
+		max-width:100%;
 	}
 	.navbar div{
-	/* border:1px solid black;
-	width:100%;
-	display:flex;
-	justify-content: space-evenly;
-	align-items: center;
-	font-size:14px;
-	font-weight:bold; */
 	flex-direction:column;
 	}
 	.navbar div a{
 		width:90%;
 		padding:20px;
-		border:1px solid gray;
+		border-bottom:1px solid gray;
 		text-align:center;
 		font-size:18px;
 	}
+	.navbar img{
+		border-bottom:1px solid gray;
+	}
+
+	.section-top{
+		border:1px solid black;
+		/* display:flex;
+		justify-content: space-between; */
+		flex-direction:column;
+
+	}
+	.content-first{
+		border:1px solid purple;
+		width:100%;
+	}
+	.second-section{
+		border:1px solid purple;
+		/* display:flex; */
+		flex-direction:column;
+	}
+	.content-second{
+		max-width:100%;
+		/* margin:40px 0 40px 0; */
+	}
+	#copyright{
+		border:1px solid black;
+		text-align:center;
+		/* padding:100px; */
+	}
+	
+
 }
 
 /****ACTION CONTAINER****/
@@ -163,7 +179,6 @@ main{
 .action-container-inner h1{
 	text-align:center;
 }
-
 .action-container img{
 	margin-left:20px;
 }
@@ -187,7 +202,7 @@ button{
 .content-first{
 	display:flex;
 	flex-direction:column;
-	max-width:45%;
+	max-width:100%;
 	margin:40px 0 40px 0;
 }
 .content-first:nth-child(1){
@@ -201,24 +216,21 @@ button{
 }
 .second-section{
 	display:flex;
-}
-.content-second{
-	max-width:30%;
-	margin:40px 0 40px 0;
-}
-.content-second:nth-child(2){
-	margin-left:40px;
-	margin-right:40px;
-}
-.second-section{
 	border-bottom:1px solid black;
 }
+.content-second{
+	max-width:100%;
+	padding:10px;
+	/* margin:40px; */
+}
+/*  */
+
 #footer{
 	margin-top:40px;
 	font-family: 'Roboto', sans-serif;
 }
 #copyright{
 	text-align:center;
-	padding:100px;
+	padding:80px;
 }
 
